--- a/Plant-Distribution Backend/src/main/resources/application.properties
+++ b/Plant-Distribution Backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://194.233.68.188:3306/codewith_EAD_Project?useSSL=false
+spring.datasource.username=codewith_EAD_User
+spring.datasource.password=F2TV#APGU=7t
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto=update
